[gd_scene load_steps=2 format=3 uid="uid://b5na2suxvydjf"]

[ext_resource type="Script" path="res://gdble_discover.gd" id="1_rte61"]

[node name="GodotBle" type="GodotBle"]
script = ExtResource("1_rte61")

[connection signal="on_device_found" from="." to="." method="_on_on_device_found"]
[connection signal="start_write" from="." to="." method="_on_start_write"]
